syntax = "proto3";
package akash.market;

import "gogoproto/gogo.proto";
import "akash/market/order.proto";
import "cosmos/cosmos.proto";

option go_package = "github.com/ovrclk/akash/x/market/types";

// MsgCreateBid defines an SDK message for creating Bid
message MsgCreateBid {
    option (gogoproto.equal) = false;

    OrderID order = 1 [
        (gogoproto.customname) = "Order",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "order",
        (gogoproto.moretags)   = "yaml:\"order\""
    ];
    bytes provider = 2 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.jsontag)  = "provider",
        (gogoproto.moretags) = "yaml:\"provider\""
    ];
    cosmos.Coin price = 3 [
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "price",
        (gogoproto.moretags)   = "yaml:\"price\""
    ];
}

// MsgCloseBid defines an SDK message for closing bid
message MsgCloseBid {
    option (gogoproto.equal) = false;

    BidID bid_id = 1 [
        (gogoproto.customname) = "BidID",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "id",
        (gogoproto.moretags)   = "yaml:\"id\""
    ];
}

// BidID stores owner and all other seq numbers
// A successful bid becomes a Lease(ID).
message BidID {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    bytes owner = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.jsontag)  = "owner",
        (gogoproto.moretags) = "yaml:\"owner\""
    ];
    uint64 dseq = 2 [
        (gogoproto.customname) = "DSeq",
        (gogoproto.jsontag)    = "dseq",
        (gogoproto.moretags)   = "yaml:\"dseq\""
    ];
    uint32 gseq = 3 [
        (gogoproto.customname) = "GSeq",
        (gogoproto.jsontag)    = "gseq",
        (gogoproto.moretags)   = "yaml:\"gseq\""
    ];
    uint32 oseq = 4 [
        (gogoproto.customname) = "OSeq",
        (gogoproto.jsontag)    = "oseq",
        (gogoproto.moretags)   = "yaml:\"oseq\""
    ];
    bytes provider = 5 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.jsontag)  = "provider",
        (gogoproto.moretags) = "yaml:\"provider\""
    ];
}

// Bid stores BidID, state of bid and price
message Bid {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_stringer) = false;

    BidID bid_id = 1 [
        (gogoproto.customname) = "BidID",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "id",
        (gogoproto.moretags)   = "yaml:\"id\""
    ];
    uint32 state = 2 [
        (gogoproto.customtype) = "BidState",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "state",
        (gogoproto.moretags)   = "yaml:\"state\""
    ];
    cosmos.Coin price = 3 [
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "price",
        (gogoproto.moretags)   = "yaml:\"price\""
    ];
}

// BidFilters defines flags for bid list filter
message BidFilters {
    option (gogoproto.equal) = false;

    bytes owner = 1 [
        (gogoproto.casttype)   = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.jsontag)    = "owner",
        (gogoproto.moretags)   = "yaml:\"owner\""
    ];
    uint64 dseq = 2 [
        (gogoproto.customname) = "DSeq",
        (gogoproto.jsontag)    = "dseq",
        (gogoproto.moretags)   = "yaml:\"dseq\""
    ];
    uint32 gseq = 3 [
        (gogoproto.customname) = "GSeq",
        (gogoproto.jsontag)    = "gseq",
        (gogoproto.moretags)   = "yaml:\"gseq\""
    ];
    uint32 oseq = 4 [
        (gogoproto.customname) = "OSeq",
        (gogoproto.jsontag)    = "oseq",
        (gogoproto.moretags)   = "yaml:\"oseq\""
    ];
    bytes provider = 5 [
        (gogoproto.casttype)   = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.jsontag)    = "provider",
        (gogoproto.moretags)   = "yaml:\"provider\""
    ];
    uint32 state = 6 [
        (gogoproto.customtype) = "BidState",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "state",
        (gogoproto.moretags)   = "yaml:\"state\""
    ];
}
