syntax = "proto3";
package akash.market.v1beta1;

import "akash/market/v1beta1/bid.proto";
import "akash/market/v1beta1/lease.proto";
option go_package = "github.com/ovrclk/akash/x/market/types";

// Msg defines the market Msg service
service Msg {
  // CreateBid defines a method to create a bid given proper inputs.
  rpc CreateBid(MsgCreateBid) returns (MsgCreateBidResponse);

  // CloseBid defines a method to close a bid given proper inputs.
  rpc CloseBid(MsgCloseBid) returns (MsgCloseBidResponse);

  rpc WithdrawBid(MsgWithdrawBid) returns (MsgWithdrawBidResponse);

  rpc CreateLease(MsgCreateLease) returns (MsgCreateLeaseResponse);

  // CloseLease defines a method to close an order given proper inputs.
  rpc CloseLease(MsgCloseLease) returns (MsgCloseLeaseResponse);
}
